sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:5: error: not found: value getRayonCrep
    if(getRayonCrep(i+1)<gerRayonCrepe(i)){
       ^BasicPancake:5: error: not found: value gerRayonCrepe
    if(getRayonCrep(i+1)<gerRayonCrepe(i)){
                         ^